implementando rota de teste get para jwt
