# app/Http/Controllers/Controller.php
@@ -7,11 +7,7 @@ use Illuminate\Foundation\Bus\DispatchesJobs;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
 /**
- * @OA\Info(title="Helpet", version="0.1"),
- * @OA\Get(
- *     path="/api/resource.json",
- *     @OA\Response(response="200", description="An example resource")
- * )
+ * @OA\Info(title="Helpet", version="0.1")
  */
 class Controller extends BaseController
 {
